kubernetes/account-microservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-deployment
  labels:
    app: account
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels: 
        app: account
    spec:
      containers:
        - name: account
          stdin: true
          tty: true
          image: theberserkerzx/web_app_account
          ports:
            - containerPort: 80
