kubernetes/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  labels:
    app: gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels: 
        app: gateway
    spec:
      containers:
        - name: gateway
          stdin: true
          tty: true
          image: theberserkerzx/web_app_gateway
          ports:
            - containerPort: 80
