kubernetes/presenter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: presenter-deployment
  labels:
    app: presenter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: presenter
  template:
    metadata:
      labels: 
        app: presenter
    spec:
      containers:
        - name: presenter
          stdin: true
          tty: true
          image: theberserkerzx/web_app_presenter
          ports:
            - containerPort: 80
