kubernetes/rabbit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit-deployment
  labels:
    app: rabbit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbit
  template:
    metadata:
      labels: 
        app: rabbit
    spec:
      containers:
        - name: rabbit
          image: rabbitmq:3-management
          ports:
          - containerPort: 5672
          - containerPort: 15672
