kubernetes/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-deployment
                port:
                  number: 3000
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: gateway-deployment
                port:
                  number: 80
          - path: /rabbit/(.*)
            pathType: Prefix
            backend:
              service:
                name: rabbit-deployment
                port:
                  number: 15672
